Fix padding on small windows.

--- a/data/taquin.css
+++ b/data/taquin.css
@@ -28,11 +28,11 @@ button.unfullscreen-button {
 * * new-game screen generics
 \*/
 
-                               .main-grid               { transition:padding 0.3s; padding:1.5rem; }
-                  .thin-window .main-grid               {                          padding:1.0rem; }
-.extra-thin-window.thin-window .main-grid,
-                  .flat-window .main-grid               {                          padding:0.5rem; }
-.extra-flat-window.flat-window .main-grid               {                          padding:0.4rem; }
+                               .game-box                { transition:padding 0.3s; padding:1.5rem; }
+                  .thin-window .game-box                {                          padding:1.0rem; }
+.extra-thin-window.thin-window .game-box,
+                  .flat-window .game-box                {                          padding:0.5rem; }
+.extra-flat-window.flat-window .game-box                {                          padding:0.4rem; }
 
                                button.start-game-button { margin-top:1.5rem; margin-bottom:0.5rem;
                                                transition:margin-top 0 ease, margin-bottom 0 ease; }
